Wrap on edit and delete icons. Fixed hovering on icons

--- a/frontend-react/src/components/checkoutSection/CheckoutSection.css
+++ b/frontend-react/src/components/checkoutSection/CheckoutSection.css
@@ -171,9 +171,6 @@
         justify-content: center;
     }
 
-    #checkout-and-related-products {
-        margin: 5%;
-    }
 
 }
 
